<resources>
    <string name="app_name">Muvigram</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Dummy Text -->
    <string name="stream_text_music_name_dummy">Lana Del Rey - Young And Beautiful</string>
    <string name="video_specification_dummy">Check out @websta_me’s 25 most popular hashtags on Instagram: #15 = #picoftheday @scottayres @PostPlanner Similar
        to #8 </string>
    <string name="user_name_text_dummy">aless.dancelife</string>


    <!-- Dialog  -->
    <string name="dialog_loading">Loading</string>

    <!-- Strings Sign or Login  -->
    <string name="sing_user_name">User name</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_short_username">This username is too short</string>
    <string name="error_incorrect_username">This username is incorrect</string>
    <string name="action_user_in_short">User name</string>


    <string name="invalid_email">Email is invalid</string>
    <string name="invalid_password">Password must be at least 6 characters</string>
    <string name="invalid_userid">Userid must be at least 6 characters</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log in</string>
    <string name="sign_in_message">You have signed in!</string>


    <!-- SearchFragment -->
    <string name="search_bar_text">search</string>
    <string name="search_heard_item_title">trending tags</string>


    <!-- Strings dialog  -->
    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_error_title">Sorry</string>

    <!-- Strings home_space_navigation  -->
    <string name="home_space_item">HOME</string>
    <string name="home_space_item1">SEARCH</string>
    <string name="home_space_item2">NOTIFY</string>
    <string name="home_space_item3">INFO</string>
    <string name="home_space_item_center">CAMERA</string>

    <!-- Strings related to test -->
    <string name="test_skip">skip</string>
    <string name="test_login">log in</string>
    <string name="test_sign">sign up</string>
    <string name="test_bottom_music">Select\nmusic</string>
    <string name="test_bottom_camera">Shoot\nfirst</string>
    <string name="test_bottom_library">From\nLibrary</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_sign">Sign in</string>
    <string name="intro_facebook_text">connect with facebook</string>

    <!-- intro -->
    <string name="intro_buttin_facebook">connect with Facebook</string>
    <string name="intro_button_twitter">twitter</string>
    <string name="intro_buttin_email">email</string>
    <string name="intro_dummy_text">by signing up, you agree to the Teams of Use <![CDATA["&"]]> \n Privacy Policy.</string>

    <!-- Feed Fragment -->
    <string name="feed_dialog_text">loading</string>
    <string name="feed_text_follow">follow</string>
    <string name="feed_text_featured">featured</string>
    <string name="feed_text_foryou">for you</string>


    <!-- Search Fragment -->
    <string name="trending_tags">Trending tags</string>
    <string name="trending_sounds">Trending sounds</string>
    <string name="trending_users">Trending users</string>

    <string name="search_people">search people</string>
    <string name="search_tags">search tags</string>
    <string name="search_sounds">search sounds</string>


    <!-- Notify Fragment -->
    <string name="notifications">Notifications</string>
    <string name="notify_follow_message">is now following you</string>
    <string name="notify_like_message">liked your muvigram</string>
    <string name="notify_reply_message">commented on your muvigram</string>


    <!-- Profile Fragment -->
    <string name="profile_text_following">following</string>
    <string name="profile_text_fans">fans</string>
    <string name="profile_text_likes">likes</string>
    <string name="profile_button_edit_profile">edit profile</string>

    <string name="profile_most_popular">most popular</string>
    <string name="profile_most_recent">most recent</string>

    <!-- Feed Fragment Item -->
    <string name="feed_menu_item1">ask question</string>
    <string name="feed_menu_item2">start duet new!</string>
    <string name="feed_menu_item3">share on facebook</string>
    <string name="feed_menu_item4">share on instagram</string>
    <string name="feed_menu_item5">share on FB messenger</string>
    <string name="feed_menu_item6">other share options</string>
    <string name="feed_menu_item7">report abuse</string>

    <!-- Find Friend -->
    <string name="phone_contact">phone contact</string>
    <string name="connect_to_facebook">connect to facebook</string>
    <string name="musers_text">musers you may know</string>

    <!-- commentActivity title -->
    <string name="comment_title">comments</string>
    <string name="comment_edittext_hint">say something nice...</string>

    <!-- Camera Fragment -->
    <string name="camera_record_video">Start record</string>
    <string name="camera_change_mode">Change the camera mode</string>
    <string name="camera_flash_on_off">On/Off the flash</string>
    <string name="permission_request">This sample needs permission for camera and audio recording.</string>

    <!-- MusicSelect Fragment -->
    <string name="musicselect_list_item_music_play_desc">Play the music</string>
    <string name="musicselect_list_item_music_info_desc">Information about the music</string>
    <string name="musicselect_category_item_category_image_desc">Category image</string>

    <string name="musicselect_tab_bar_online_library">Online library</string>
    <string name="musicselect_tab_bar_local_library">My songs</string>

    <string name="musicselect_search_bar_search">Search music</string>

    <string name="musicselect_local_list_empty_musics">There arn\'t any musics</string>
    <string name="musicselect_local_list_error_loading">There was a problem loading the musics.</string>

    <string name="musicselect_online_category_empty_musics">There arn\'t any musics</string>
    <string name="musicselect_online_category_error_loading">There was a problem loading the categories.</string>

    <!-- VideoSelection Fragment -->
    <string name="video_select_local_loading_error">Loading local video problem</string>
    <string name="video_select_title">Videos</string>
    <string name="video_select_too_short">duration should be MIN_TIME seconds up</string>
    <string name="video_select_too_long">duration should be MAX_TIME seconds down</string>
    <string name="video_select_force_wait">please wait a second</string>

    <!-- VideoCutting Fragment -->
    <string name="video_cut_title">Cut Video</string>
    <string name="video_cut_sub_title">scroll to cut video</string>
    <string name="video_cut_transcode">converting</string>
    <string name="video_cut_progress">loading</string>

    <!-- AudioCutting Fragment -->
    <string name="audio_cut_progress">loading</string>
    <string name="audio_cut_trim">cutting</string>

    <!-- VideoEdit Fragment -->
    <string name="video_edit_title">Video Edit</string>
    <string name="video_edit_audio_cut_title">Cut Music</string>
    <string name="video_edit_audio_cut_sub_title"> scroll to cut music</string>
    <string name="video_edit_upload_hint">title with #tag @friend</string>
    <string name="video_edit_private_store">store privately</string>
    <string name="video_edit_public_upload">upload publicly</string>

</resources>
