<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="?android:buttonBarStyle">
    
    <Button
        android:id="@+id/sheet_music_button"
        android:text="@string/test_bottom_music"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        style="?android:buttonBarButtonStyle"
        />

    <Button
        android:id="@+id/sheet_camera_button"
        android:text="@string/test_bottom_camera"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        style="?android:buttonBarButtonStyle"
        />

    <Button
        android:id="@+id/sheet_library_button"
        android:text="@string/test_bottom_library"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        style="?android:buttonBarButtonStyle"
        />

</LinearLayout>