<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark">

    <!-- video view-->
    <com.estsoft.muvigram.customview.IncreasVideoView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:id="@+id/edit_video_video_view"/>


    <!-- navigation and title -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/ic_navigation_left_white_40dp"
            android:id="@+id/edit_video_back_image_view"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:textSize="24sp"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:text="@string/video_edit_title"
            android:id="@+id/edit_video_title_text_view"/>

    </FrameLayout>

    <!-- util buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical">

        <com.estsoft.muvigram.customview.MusicRecordView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="50dp"
            android:background="@drawable/ic_function_album_60dp"
            android:id="@+id/edit_video_audio_album"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_function_audio_cut_40dp"
            android:id="@+id/edit_video_audio_edit_button"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_function_audio_setting_40dp"
            android:id="@+id/edit_video_audio_setting_button"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_function_video_filter_40dp"
            android:id="@+id/edit_video_video_filter_button"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_function_video_speed_40dp"
            android:id="@+id/edit_video_video_speed_button"/>

    </LinearLayout>

    <!-- uploads -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:layout_marginBottom="50dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/white"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/video_edit_upload_hint"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="bottom"
            android:background="@android:color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <!-- private button-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:padding="10dp"
                android:background="@drawable/border_white">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_info_private_24dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:text="@string/video_edit_private_store"/>
            </LinearLayout>

            <!-- upload button-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:padding="10dp"
                android:background="@drawable/border_white_red_full">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_info_public_24dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:text="@string/video_edit_public_upload"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
